# BOM_automation

./: .gitignore  README.md  pyproject.toml
data/: parts_db.csv
src/bom_router/: __init__.py  cli.py  database.py  output.py  parser.py
